examples/negative/modules/qualified_missing_export/main.kai
# Negative fixture (#520 / modules): `lib` exports `one`, but
# `main` calls `lib.two()`. Resolver must reject by naming the
# missing export and listing the actual exports.

import lib

fn main() : Int = lib.two()
